--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hola
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tools</title>
+</head>
+<body>
+<div class="central_div">
+    <div class="Square_option">Ruleta</div>
+    <div class="Square_option"> Cronometro</div>
+</div>
+</body>
+</html>
