--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Tools</title>
+    <link rel="stylesheet" href="CSS/style.css">
+
 </head>
 <body>
 <div class="central_div">
-    <div class="Square_option">Ruleta</div>
-    <div class="Square_option"> Cronometro</div>
+    <div class="grid_tools">
+        <a href="tools/roulette/rulette-html.html">
+            <div class="item item1">
+                <div class="container_image">
+                    <img src="images/ruolette.png" alt="">
+                    <h2>Ruleta</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="item item2">
+                <div class="container_image">
+                    <img src="images/crono.png" alt="">
+                    <h2>Cronometro</h2>
+                </div>
+            </div>
+        </a>
+    </div>
 </div>
 </body>
 </html>
