--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Roulette</title>
+    <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
-
+<div id="coutainer_main" class="central_div">
+<button id="rotar" >
+    GO
+</button>
+</div>
 </body>
+<script src="../../JS/forRoulette.js"></script>
 </html>
