--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </a>
-        <a href="#">
+        <a href="tools/timer/timer-html.html">
             <div class="item item2">
                 <div class="container_image">
                     <img src="images/crono.png" alt="">
