--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -11,6 +11,7 @@
     GO
 </button>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </body>
 <script src="../../JS/forRoulette.js"></script>
 </html>
