--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 <div id="coutainer_main" class="central_div">
+    <div class="container_botom">
 <button id="rotar" >
     GO
 </button>
+    </div>
+    <div id="container_list">
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </body>
