--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -16,6 +16,8 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+<audio id="runRuoulette" src="../../images/ruleta.mp3"></audio>
+<audio id="winner" src="../../images/winner.mp3"></audio>
 </body>
 <script src="../../JS/forRoulette.js"></script>
 </html>
