--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -6,13 +6,25 @@
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
-<div id="coutainer_main" class="central_div">
-    <div class="container_botom">
-<button id="rotar" >
-    GO
-</button>
+<div class="main">
+    <div class="menu">
+        <a href="../../index.html">
+            <h2>Menu</h2>
+        </a>
+        <a href="../timer/timer-html.html">
+            <h2>Timer</h2>
+        </a>
     </div>
-    <div id="container_list">
+    <div id="coutainer_main" class="central_div">
+
+        <button id="rotar" >
+            <div class="container_botom">
+                GO
+            </div>
+        </button>
+
+        <div id="container_list">
+        </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
