PART 1 - NOT WORKING BUT MOSTLY DONE

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <a href="tools/roulette/rulette-html.html">
             <div class="item item1">
                 <div class="container_image">
-                    <img src="images/ruolette.png" alt="">
+                    <img src="images/main/ruolette.png" alt="">
                     <h2>Ruleta</h2>
                 </div>
             </div>
         </a>
-        <a href="tools/timer/timer-html.html">
+        <a href="tools/timer/timer-main.html">
             <div class="item item2">
                 <div class="container_image">
-                    <img src="images/crono.png" alt="">
+                    <img src="images/main/crono.png" alt="">
                     <h2>Cronometro</h2>
                 </div>
             </div>
