PART 2 -DONE FECHA Y HORA FUNCIONAN :)

--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -18,13 +18,15 @@
       <option value="song2.mp3">Canción 2</option>
     </select>
     <br><br>
-    <div id="countdown"></div>
-      <div id="currentDateTime">
-      <p>Fecha y hora actuales: <span id="current-time"></span></p>
-      </div>
-    <button id="pause">PAUSE</button>
-    <button id="play">PLAY</button>
-    <button id="restart">RESTART</button>
+  <div id="countdown"></div>
+  <div id="current-time"></div>
+  <br>
+  <button id="pause-button" onclick="pauseCountdown()">PAUSE</button>
+  <button id="play-button" onclick="startCountdown()">PLAY</button>
+  <button id="restart-button" onclick="restartCountdown()">RESTART</button>
+</body>
+  <script src="../../JS/timer/forTimer-countdown2.js"></script>
+</html>
   </body>
 <script src="../../JS/timer/forTimer-countdown1.js"></script>
 </html>
