PART 2 -DONE FECHA Y HORA FUNCIONAN :)

--- a/tools/timer/timer-countdown2.html
+++ b/tools/timer/timer-countdown2.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Temporizador de cuenta regresiva</title>
+  <title>Countdown</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
-  <h1>Temporizador de cuenta regresiva</h1>
+  <h1 class="title">COUNTDOWN TIMER :)</h1>
+  <div class="fecha_incio">
   <label>Fecha y hora de inicio:</label>
-  <input type="datetime-local" id="datetime-input">
+  <input class="datetime-input" type="datetime-local" id="datetime-input">
   <br><br>
-  <label>Música:</label>
+  </div>
+  <label>Musica:</label>
   <select id="music-dropdown">
-    <option value="music1.mp3">Música 1</option>
-    <option value="music2.mp3">Música 2</option>
+    <option value="music1.mp3">Musica 1</option>
+    <option value="music2.mp3">Musica 2</option>
   </select>
   <br><br>
-  <div id="countdown"></div>
-  <div id="current-time"></div>
+  <div class="countdonw" id="countdown"></div>
+  <div class="currenttime" id="current-time"></div>
   <br>
-  <button id="pause-button" onclick="pauseCountdown()">PAUSE</button>
-  <button id="play-button" onclick="startCountdown()">PLAY</button>
-  <button id="restart-button" onclick="restartCountdown()">RESTART</button>
+  <button class="timer-buttons" id="pause-button" onclick="pauseCountdown()">PAUSE</button>
+  <button class="timer-buttons" id="play-button" onclick="startCountdown()">PLAY</button>
+  <button class="timer-buttons" id="restart-button" onclick="restartCountdown()">RESTART</button>
 </body>
   <script src="../../JS/timer/forTimer-countdown2.js"></script>
 </html>
