--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <title>Tools</title>
     <link rel="stylesheet" href="CSS/style.css">
-
 </head>
 <body>
-<div class="central_div">
-    <div class="grid_tools">
+<header>
+    <nav class="menu_nav">
+        <a class="menu_opc" href="./index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="./tools/timer/timer-main.html">TIMER</a>
+    </nav>
+</header>
+<div class="seccion_herramientas">
+    <div class="contenedor_herramientas">
         <a href="tools/roulette/rulette-html.html">
             <div class="item item1">
-                <div class="container_image">
+                <div class="imagen_herramientas">
                     <img src="images/main/ruolette.png" alt="">
-                    <h2>Ruleta</h2>
+                    <h2 class="titulo_herramientas">Ruleta</h2>
                 </div>
             </div>
         </a>
+    </div>
+    <div class="contenedor_herramientas">
         <a href="tools/timer/timer-main.html">
             <div class="item item2">
-                <div class="container_image">
+                <div class="imagen_herramientas">
                     <img src="images/main/crono.png" alt="">
-                    <h2>Cronometro</h2>
+                    <h2 class="titulo_herramientas">Cronometro</h2>
                 </div>
             </div>
         </a>
