--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Temporizador de cuenta regresiva</title>
+<head>
+  <title>Countdown</title>
     <link rel="stylesheet" href="../../CSS/style.css">
-  </head>
-  <body>
-    <h1>Temporizador de cuenta regresiva</h1>
+</head>
+<body>
+<header>
+    <nav class="menu_nav">
+        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
+    </nav>
+</header>
+  <h1 class="title">COUNTDOWN TIMER :)</h1>
+  <div class="fecha_incio">
     <p>Selecciona la cantidad de horas, minutos y segundos:</p>
     <input type="number" id="hours" placeholder="Horas">
     <input type="number" id="minutes" placeholder="Minutos">
     <input type="number" id="seconds" placeholder="Segundos">
-    <br><br>
-    <label for="music">Selecciona una música:</label>
-    <select id="music">
-      <option value="song1.mp3">Canción 1</option>
-      <option value="song2.mp3">Canción 2</option>
-    </select>
-    <br><br>
-  <div id="countdown"></div>
-  <div id="current-time"></div>
+  <br><br>
+  </div>
+  <label>Musica:</label>
+  <select id="music-dropdown">
+    <option value="music1.mp3">Musica 1</option>
+    <option value="music2.mp3">Musica 2</option>
+  </select>
+  <br><br>
+  <div class="countdonw" id="countdown"></div>
+  <div class="currenttime" id="current-time"></div>
   <br>
-  <button id="pause-button" onclick="pauseCountdown()">PAUSE</button>
-  <button id="play-button" onclick="startCountdown()">PLAY</button>
-  <button id="restart-button" onclick="restartCountdown()">RESTART</button>
-  </body>
-<script src="../../JS/timer/forTimer-countdown1.js"></script>
+  <button class="timer-buttons" id="pause-button" onclick="pauseCountdown()">PAUSE</button>
+  <button class="timer-buttons" id="play-button" onclick="startCountdown()">PLAY</button>
+  <button class="timer-buttons" id="restart-button" onclick="restartCountdown()">RESTART</button>
+</body>
+  <script src="../../JS/timer/forTimer-countdown2.js"></script>
 </html>
