--- a/tools/timer/timer-countdown2.html
+++ b/tools/timer/timer-countdown2.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
+<header>
+    <nav class="menu_nav">
+        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
+    </nav>
+</header>
   <h1 class="title">COUNTDOWN TIMER :)</h1>
   <div class="fecha_incio">
   <label>Fecha y hora de inicio:</label>
@@ -13,7 +20,7 @@
   </div>
   <label>Musica:</label>
   <select id="music-dropdown">
-    <option value="music1.mp3">Musica 1</option>
+    <option value="music1.mp3" src="../../tools/timer/music1.mp3">Musica 1</option>
     <option value="music2.mp3">Musica 2</option>
   </select>
   <br><br>
