--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
+<header>
+    <nav class="menu_nav">
+        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
+    </nav>
+</header>
 <div id="coutainer_main" class="central_div">
     <div class="container_botom">
 <button id="rotar" >
