--- a/tools/timer/timer-main.html
+++ b/tools/timer/timer-main.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="../../CSS/style.css">
   </head>
   <body>
+  <header>
+    <nav class="menu_nav">
+        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
+    </nav>
+</header>
     <h1>Choose what you want to do:</h1>
     <button onclick="location.href='timer-countdown1.html'">Set an amount of time</button>
     <button onclick="location.href='timer-countdown2.html'">Set a Date and Time</button>
