--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>Tools</title>
@@ -12,6 +12,10 @@
         <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc" href="./tools/timer/timer-main.html">TIMER</a>
     </nav>
+    <label id="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 </header>
 <div class="seccion_herramientas">
     <div class="contenedor_herramientas">
@@ -35,5 +39,7 @@
         </a>
     </div>
 </div>
+<script src="./JS/darkMode.js"></script>
 </body>
+
 </html>
