--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -12,6 +12,10 @@
         <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
     </nav>
+    <label id="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 </header>
 <div id="coutainer_main" class="central_div">
     <div class="container_botom">
@@ -23,8 +27,9 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+<script src="../../JS/roulette/forRoulette.js"></script>
+<script src="../../JS/darkMode.js"></script>
 <audio id="runRuoulette" src="../../images/roulette/ruleta.mp3"></audio>
 <audio id="winner" src="../../images/roulette/winner.mp3"></audio>
 </body>
-<script src="../../JS/roulette/forRoulette.js"></script>
 </html>
