--- a/tools/timer/timer-main.html
+++ b/tools/timer/timer-main.html
@@ -12,9 +12,14 @@
         <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
     </nav>
+      <label id="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+      </label>
 </header>
     <h1>Choose what you want to do:</h1>
     <button onclick="location.href='timer-countdown1.html'">Set an amount of time</button>
     <button onclick="location.href='timer-countdown2.html'">Set a Date and Time</button>
   </body>
+  <script src="../../JS/darkMode.js"></script>
 </html>
