--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Countdown</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
@@ -11,6 +12,10 @@
         <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
     </nav>
+  <label id="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>
 </header>
   <h1 class="title">COUNTDOWN TIMER :)</h1>
   <div class="fecha_incio">
@@ -22,16 +27,17 @@
   </div>
   <label>Musica:</label>
   <select id="music-dropdown">
-    <option value="music1.mp3">Musica 1</option>
+    <option id="" value="music1.mp3">Musica 1</option>
     <option value="music2.mp3">Musica 2</option>
   </select>
   <br><br>
   <div class="countdonw" id="countdown"></div>
   <div class="currenttime" id="current-time"></div>
   <br>
-  <button class="timer-buttons" id="pause-button" onclick="pauseCountdown()">PAUSE</button>
-  <button class="timer-buttons" id="play-button" onclick="startCountdown()">PLAY</button>
-  <button class="timer-buttons" id="restart-button" onclick="restartCountdown()">RESTART</button>
+  <button class="timer-buttons" id="pause-button">PAUSE</button>
+  <button class="timer-buttons" id="play-button">PLAY</button>
+  <button class="timer-buttons" id="restart-button">RESTART</button>
 </body>
-  <script src="../../JS/timer/forTimer-countdown2.js"></script>
+  <script src="../../JS/darkMode.js"></script>
+  <script src="../../JS/timer/forTimer-countdown1.js"></script>
 </html>
