--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -19,17 +19,17 @@
 </header>
 <div id="coutainer_main" class="central_div">
     <div class="container_botom">
-<button id="rotar" >
-    GO
-</button>
+        <button id="rotar" >
+            GO
+        </button>
     </div>
     <div id="container_list">
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-<script src="../../JS/roulette/forRoulette.js"></script>
-<script src="../../JS/darkMode.js"></script>
-<audio id="runRuoulette" src="../../images/roulette/ruleta.mp3"></audio>
+<audio id="runRuolette" src="../../images/roulette/ruleta.mp3"></audio>
 <audio id="winner" src="../../images/roulette/winner.mp3"></audio>
 </body>
+<script src="../../JS/roulette/forRoulette.js"></script>
+<script src="../../JS/darkMode.js"></script>
 </html>
