--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -8,14 +8,14 @@
 <body>
 <header>
     <nav class="menu_nav">
-        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
-        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
-        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
+        <a class="menu_opc" href="./index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc_last" href="./tools/timer/timer-main.html">TIMER</a>
+        <label id="switch" class="menu_button">
+        <input type="checkbox">
+        <span class="slider round"></span>
+        </label>
     </nav>
-  <label id="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-  </label>
 </header>
   <h1 class="title">COUNTDOWN TIMER :)</h1>
   <div class="fecha_incio">
