--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -8,14 +8,14 @@
 <body>
 <header>
     <nav class="menu_nav">
-        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
-        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
-        <a class="menu_opc" href="../../tools/timer/timer-main.html">TIMER</a>
-    </nav>
-    <label id="switch">
+        <a class="menu_opc" href="./index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc_last" href="./tools/timer/timer-main.html">TIMER</a>
+        <label id="switch" class="menu_button">
         <input type="checkbox">
         <span class="slider round"></span>
-    </label>
+        </label>
+    </nav>
 </header>
 <div id="coutainer_main" class="central_div">
     <div class="container_botom">
