--- a/tools/timer/timer-main.html
+++ b/tools/timer/timer-main.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../CSS/style.css">
   </head>
   <body>
-  <header>
+  <header class="header">
     <nav class="menu_nav">
         <a class="menu_opc" href="./index.html">MAIN PAGE</a>
         <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
