--- a/tools/roulette/rulette-html.html
+++ b/tools/roulette/rulette-html.html
@@ -8,8 +8,8 @@
 <body>
 <header class="header">
     <nav class="menu_nav">
-        <a class="menu_opc" href="./index.html">MAIN PAGE</a>
-        <a class="menu_opc" href="./tools/roulette/rulette-html.html">ROULETTE</a>
+        <a class="menu_opc" href="../../index.html">MAIN PAGE</a>
+        <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc_last" href="../../tools/timer/timer-main.html">TIMER</a>
         <label id="switch" class="menu_button">
         <input type="checkbox">
