--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Countdown</title>
+    <meta charset="UTF-8">
+    <title>Countdown</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
@@ -12,29 +12,33 @@
         <a class="menu_opc" href="../../tools/roulette/rulette-html.html">ROULETTE</a>
         <a class="menu_opc_last" href="../../tools/timer/timer-main.html">TIMER</a>
         <label id="switch" class="menu_button">
-        <input type="checkbox">
-        <span class="slider round"></span>
+            <input type="checkbox">
+            <span class="slider round"></span>
         </label>
     </nav>
 </header>
-  <h1 class="title">COUNTDOWN TIMER :)</h1>
-<div>
-    <label for="hours">Horas:</label>
-    <input type="number" id="hours" min="0" max="23" value="0">
-    <label for="minutes">Minutos:</label>
-    <input type="number" id="minutes" min="0" max="59" value="0">
-    <label for="seconds">Segundos:</label>
-    <input type="number" id="seconds" min="0" max="59" value="0">
-    <button id="start">Iniciar cuenta regresiva</button>
-    <button id="reset">Reiniciar cuenta regresiva</button>
-    <p id="countdown">00:00:00</p>
+<h1 class="title">COUNTDOWN TIMER :)</h1>
+<div class="input_cronometro">
+    <div class="input">
+        <label for="hours">Horas:</label>
+        <input type="number" id="hours" min="0" max="23" value="0">
+        <label for="minutes">Minutos:</label>
+        <input type="number" id="minutes" min="0" max="59" value="0">
+        <label for="seconds">Segundos:</label>
+        <input type="number" id="seconds" min="0" max="59" value="0">
+    </div>
+    <div class="container_bottom_cronometro">
+        <button id="start">Iniciar cuenta regresiva</button>
+        <button id="reset">Reiniciar cuenta regresiva</button>
+        <p id="countdown">00:00:00</p>
+    </div>
 </div>
-  <label>Musica:</label>
-  <select id="music-dropdown">
+<label>Musica:</label>
+<select id="music-dropdown">
     <option id="music1" value="music1.mp3">Musica 1</option>
     <option value="music2.mp3">Musica 2</option>
-  </select>
+</select>
 </body>
-  <script src="../../JS/darkMode.js"></script>
-  <script src="../../JS/timer/forTimer-countdown1.js"></script>
+<script src="../../JS/darkMode.js"></script>
+<script src="../../JS/timer/forTimer-countdown1.js"></script>
 </html>
