--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -27,17 +27,21 @@
         <label for="seconds">Segundos:</label>
         <input type="number" id="seconds" min="0" max="59" value="0">
     </div>
+    <br></br>
+    <div>
+    <label>Musica:</label>
+    <select id="music-dropdown">
+        <option id="music1" value="music1.mp3">Musica 1</option>
+        <option value="music2.mp3">Musica 2</option>
+    </select>
+    </div>
+    <p id="countdown">00:00:00</p>
     <div class="container_bottom_cronometro">
         <button id="start">Iniciar cuenta regresiva</button>
         <button id="reset">Reiniciar cuenta regresiva</button>
-        <p id="countdown">00:00:00</p>
     </div>
 </div>
-<label>Musica:</label>
-<select id="music-dropdown">
-    <option id="music1" value="music1.mp3">Musica 1</option>
-    <option value="music2.mp3">Musica 2</option>
-</select>
+
 </body>
 <script src="../../JS/darkMode.js"></script>
 <script src="../../JS/timer/forTimer-countdown1.js"></script>
