--- a/tools/timer/timer-countdown2.html
+++ b/tools/timer/timer-countdown2.html
@@ -32,9 +32,11 @@
 <div class="countdonw" id="countdown"></div>
 <div class="currenttime" id="current-time"></div>
 <br>
-<button class="timer-buttons" id="pause-button" onclick="pauseCountdown()">PAUSE</button>
-<button class="timer-buttons" id="play-button" onclick="startCountdown()">PLAY</button>
-<button class="timer-buttons" id="restart-button" onclick="restartCountdown()">RESTART</button>
+    <div>
+    <button class="timer-buttons" id="pause-button" onclick="pauseCountdown()">PAUSE</button>
+    <button class="timer-buttons" id="play-button" onclick="startCountdown()">PLAY</button>
+    <button class="timer-buttons" id="restart-button" onclick="restartCountdown()">RESTART</button>
+    </div>
 </body>
 <script src="../../JS/darkMode.js"></script>
 <script src="../../JS/timer/forTimer-countdown2.js"></script>
