--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -35,7 +35,7 @@
         <option value="music2.mp3">Musica 2</option>
     </select>
     </div>
-    <p id="countdown">00:00:00</p>
+    <p class="Countdonw_Div" id="countdown">00:00:00</p>
     <div class="container_bottom_cronometro">
         <button id="start">Iniciar cuenta regresiva</button>
         <button id="reset">Reiniciar cuenta regresiva</button>
