--- a/tools/timer/timer-countdown2.html
+++ b/tools/timer/timer-countdown2.html
@@ -29,7 +29,8 @@
   <option value="music2.mp3">Musica 2</option>
 </select>
 <br><br>
-<div class="countdonw" id="countdown"></div>
+<div class="countdonw" id="countdown">0d:0h:0m:0s</div>
+<br></br>
 <div class="currenttime" id="current-time"></div>
 <br>
     <div>
