--- a/tools/timer/timer-countdown2.html
+++ b/tools/timer/timer-countdown2.html
@@ -25,8 +25,10 @@
 </div>
 <label>Musica:</label>
 <select id="music-dropdown">
-  <option value="music1.mp3" src="../../tools/timer/music1.mp3">Musica 1</option>
-  <option value="music2.mp3">Musica 2</option>
+      <option value="music1.mp3" src="../../tools/timer/La_Gasolina.mp3">La Gasolina, Daddy Yankee</option>
+      <option value="music1.mp3" src="../../tools/timer/Billie_Jean.mp3">Billie Jean, Michael Jackson</option>
+      <option value="music1.mp3" src="../../tools/timer/Respect.mp3">Respect, Aretha Franklin</option>
+      <option value="music1.mp3" src="../../tools/timer/Smells_Like_Teen_Spirit.mp3">Smells Like Teen Spirit, Nirvana</option>
 </select>
 <br><br>
 <div class="countdonw" id="countdown">0d:0h:0m:0s</div>
