--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -31,10 +31,10 @@
     <div>
     <label>Musica:</label>
     <select id="music-dropdown">
-          <option value="music1.mp3" src="../../tools/timer/La_Gasolina.mp3">La Gasolina, Daddy Yankee</option>
-          <option value="music1.mp3" src="../../tools/timer/Billie_Jean.mp3">Billie Jean, Michael Jackson</option>
-          <option value="music1.mp3" src="../../tools/timer/Respect.mp3">Respect, Aretha Franklin</option>
-          <option value="music1.mp3" src="../../tools/timer/Smells_Like_Teen_Spirit.mp3">Smells Like Teen Spirit, Nirvana</option>
+          <option value="La_Gasolina.mp3" src="../../tools/timer/La_Gasolina.mp3">La Gasolina, Daddy Yankee</option>
+          <option value="Billie_Jean.mp3" src="../../tools/timer/Billie_Jean.mp3">Billie Jean, Michael Jackson</option>
+          <option value="Respect.mp3" src="../../tools/timer/Respect.mp3">Respect, Aretha Franklin</option>
+          <option value="Smells_Like_Teen_Spirit.mp3" src="../../tools/timer/Smells_Like_Teen_Spirit.mp3">Smells Like Teen Spirit, Nirvana</option>
     </select>
     </div>
     <p class="Countdonw_Div" id="countdown">00:00:00</p>
