EN PRINCIPIO TODO FUNCIONA YA

--- a/tools/timer/timer-countdown1.html
+++ b/tools/timer/timer-countdown1.html
@@ -37,13 +37,15 @@
           <option value="Smells_Like_Teen_Spirit.mp3" src="../../tools/timer/Smells_Like_Teen_Spirit.mp3">Smells Like Teen Spirit, Nirvana</option>
     </select>
     </div>
-    <p class="Countdonw_Div" id="countdown">00:00:00</p>
+<div class="countdonw" id="countdown">00:00:00</div>
+    <br>
+<div class="currenttime" id="current-time"></div>
+    <br>
     <div class="container_bottom_cronometro">
-        <button id="start">Iniciar cuenta regresiva</button>
-        <button id="reset">Reiniciar cuenta regresiva</button>
+        <button id="start">PLAY</button>
+        <button id="reset">RESTART</button>
     </div>
 </div>
-
 </body>
 <script src="../../JS/darkMode.js"></script>
 <script src="../../JS/timer/forTimer-countdown1.js"></script>
