--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>Tools</title>
+    <title>Classroom Tools for Javi :)</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
